samples/_failures_safe/1761348574_6a3820_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4932a89.c: In function ‘main’:
./samples/SAFE/__tmp_f4932a89.c:155:5: error: expected declaration or statement at end of input
  155 |     add_transition(sm, state_ids[1], state_ids[2], event_ids[1]);
      |     ^~~~~~~~~~~~~~
